Init sports bet logic
